--- a/client-slgc/.vscode/settings.json
+++ b/client-slgc/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "editor.detectIndentation": false,
-    "cSpell.language": "en"
+    "cSpell.language": "en",
+    "git.ignoreLimitWarning": true
 }
