--- a/client-slgc/.vscode/launch.json
+++ b/client-slgc/.vscode/launch.json
@@ -2,20 +2,38 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Cocos2-launch",
+            "name": "Cocos2-launch-Mac",
             "type": "lua",
             "request": "launch",
             "runtimeType": "Cocos2",
             "localRootDesc": "--必填 当前文件夹目录 如果 运行程序支持 workdir 该参数当做 workdir进行传入",
             "localRoot": "${workspaceRoot}",
             "mainFileDesc": "-- 先填 启动的lua 文件名 运行程序支持 workdir 当做 file 进行传入 不支持可不填",
-            "commandLine": "-workdir ${workspaceRoot}/ -file src/main_debug.lua",
+            "commandLine": "-workdir ${workspaceRoot}/ -entry src/main_debug.lua",
             "portDesc": "--必填 调试器的端口 可修改 与调用LuaDebug 的端口对应",
             "port": 7003,
             "exePathDesc1": "--必填 执行文件路径",
             "exePathDesc2": "--必填 win-> ",
             "exePathDesc3": "--必填 mac ->/Users/k0204/Desktop/quickv3/quickv3 Mac.app/Contents/MacOS/quickv3 Mac",
-            "exePath": "${workspaceRoot}/simulator/mahjong.exe",
+            "exePath": "${workspaceRoot}/runtime/mac/QLClient-desktop.app/Contents/MacOS/QLClient-desktop",
+            "printTypeDesc": "--必填 print打印方式 1 控制台和系统输出,2 控制台输出,3 系统输出",
+            "printType": 1
+        },
+        {
+            "name": "Cocos2-launch-Win",
+            "type": "lua",
+            "request": "launch",
+            "runtimeType": "Cocos2",
+            "localRootDesc": "--必填 当前文件夹目录 如果 运行程序支持 workdir 该参数当做 workdir进行传入",
+            "localRoot": "${workspaceRoot}",
+            "mainFileDesc": "-- 先填 启动的lua 文件名 运行程序支持 workdir 当做 file 进行传入 不支持可不填",
+            "commandLine": "-workdir ${workspaceRoot}/ -entry src/main_debug.lua",
+            "portDesc": "--必填 调试器的端口 可修改 与调用LuaDebug 的端口对应",
+            "port": 7003,
+            "exePathDesc1": "--必填 执行文件路径",
+            "exePathDesc2": "--必填 win-> ",
+            "exePathDesc3": "--必填 mac ->/Users/k0204/Desktop/quickv3/quickv3 Mac.app/Contents/MacOS/quickv3 Mac",
+            "exePath": "${workspaceRoot}/runtime/win/QLClient-desktop.exe",
             "printTypeDesc": "--必填 print打印方式 1 控制台和系统输出,2 控制台输出,3 系统输出",
             "printType": 1
         },
