--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ client-guiyang/res/ui/
 client-guiyang/simulator/
 client-slgc/runtime
 tools/gradle/gradle-6.0
+client-slgc/simulator/MahjongClient.pdb
