--- a/client-slgc/.vscode/launch.json
+++ b/client-slgc/.vscode/launch.json
@@ -27,7 +27,7 @@
             "localRootDesc": "--必填 当前文件夹目录 如果 运行程序支持 workdir 该参数当做 workdir进行传入",
             "localRoot": "${workspaceRoot}",
             "mainFileDesc": "-- 先填 启动的lua 文件名 运行程序支持 workdir 当做 file 进行传入 不支持可不填",
-            "commandLine": "-workdir ${workspaceRoot}/ -entry src/main_debug.lua",
+            "commandLine": "-workdir ${workspaceRoot}/ -entry src/main_debug.lua -console enable",
             "portDesc": "--必填 调试器的端口 可修改 与调用LuaDebug 的端口对应",
             "port": 7003,
             "exePathDesc1": "--必填 执行文件路径",
