--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ client-slgc/runtime
 tools/gradle/gradle-6.0
 client-slgc/simulator/win32/
 client-slgc/simulator/MahjongClient.pdb
+client-slgc/pacakge
