--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ tools/gradle/gradle-6.0
 client-slgc/simulator/win32/
 client-slgc/simulator/MahjongClient.pdb
 client-slgc/pacakge
+client-slgc/package/
